src/test/error/async1.lns
_lune_control use_async;

class Test extend LnsThread {
   pro override fn loop() mut {
   }
}
